fixed minor spacing issues

--- a/src/styling/_branding.scss
+++ b/src/styling/_branding.scss
@@ -7,5 +7,9 @@ $primary-text-colour: #a6a6a4;
 $secondary-text-colour: #141414;
 
 //Text Fonts
-$primary-text-font: "Georgia", serif;
+// $primary-text-font: "Georgia", serif;
+$primary-text-font: "Roboto", sans-serif;
 $title-text-font: "Lora", serif;
+
+// font-family: "Roboto", sans-serif;
+// font-weight: 300;
