--- a/src/styling/_homepage.scss
+++ b/src/styling/_homepage.scss
@@ -83,7 +83,7 @@
       }
 
       :hover {
-        color: $secondary-text-colour;
+        color: $secondary-text-colour !important;
       }
     }
   }
