--- a/src/styling/_workforus.scss
+++ b/src/styling/_workforus.scss
@@ -72,6 +72,7 @@
           padding-right: 5vw;
           position: relative;
           list-style-type: none;
+          margin-top: 1rem;
 
           li {
             font-size: 1.7em;
@@ -157,6 +158,7 @@
 
     h3 {
       font-size: 1.5em;
+      margin-bottom: 5vh;
     }
 
     .text-container {
