--- a/src/styling/_workwithus.scss
+++ b/src/styling/_workwithus.scss
@@ -70,6 +70,7 @@
           padding-right: 5vw;
           position: relative;
           list-style-type: none;
+          margin-top: 1rem;
 
           li {
             font-size: 1.7em;
@@ -139,6 +140,7 @@
 
       h3 {
         font-size: 1.5em;
+        margin-bottom: 5vh;
       }
 
       .text-container {
